# QVP

./: .gitignore  IPO_deep_research.py  IR_Analysis.py  IR_Analysis_JYK.py  IR_Analysis_backup.py  LICENSE  Multi_IR_Analysis.py  README.md  SWOT.py  advanced_deep_research.py  analyze_ipo_viability.py  check_per_data.py  check_psr_data.py  competitive_analysis.py  convert_json_to_html.py  convert_to_md.py  crawl_ipo_data.py  deep_research.py  embedding_md copy.py  embedding_md.py  embedding_mds.py  extract_lean_canvas.py  file_upload.html  generate_strategic_report.py  innoforest_stealth.py  ipo_data_extractor.py  ir_pdf_parser.py  kosdaq_ipo_analyzer.py  kosdaq_ipo_analyzer_v2.py  main.py  main_stealth.py  page_content_2189.html  pdf_preprocessing.py  pyproject.toml  requirements.txt  run_full_analysis_pipeline.py  search_assistant.py  simple_integrated_crawler.py  summarize_voice_test.py  summarize_with_refine.py  (+4 more)
analysis_results/: 9_티쓰리큐_cleaned_vision_analysis.json  9_티쓰리큐_cleaned_vision_summary.md  모큐라텍_IR_cleaned_vision_analysis.json  모큐라텍_IR_cleaned_vision_summary.md  십일리터_IR_cleaned_vision_analysis.json  십일리터_IR_cleaned_vision_summary.md
bm_result/: advanced_deep_research_report_ROBOS_20250611_163629.json  competitive_analysis_report_ROBOS_20250611_163629.json  lean_canvas_ROBOS_20250611_163629.json  strategic_report_ROBOS_20250611_163629.html  strategic_report_ROBOS_20250611_163629.json  strategic_report_ROBOS_20250611_163629.md
company_summary/: comprehensive_integrated_data_그리니쉬_20250728_145104.json  comprehensive_integrated_data_두나무_20250728_113715.json  (+5 more)
(+25 files in other folders)
